tests/paczka1/small_fuzzy/85009707.err
Error in line 3: 2eq S808 60,7
Error in line 13: 2eq S168 -1,8
